🎨 style(style.css): change background color from #252525 to #c5c5c5

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 html,
 body {
-  background-color: #252525;
+  background-color: #c5c5c5;
   min-height: 100vh;
   line-height: 130%;
   font-family: 'Inter';
